--- a/main.html
+++ b/main.html
@@ -8,9 +8,58 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<script type="text/javascript" src="./script.js">
+	</script>
 
 </body>
+<header>
+	<h1 id="Moviename">Chhichhore</h1>
+	<nav id="navbar">
+		<a href="#actor" id="nav-actor">Actors</a>|
+		<a href="#quote" id="nav-quote">Quotes</a>
+	</nav>
+</header>
+<br>
+<main>
+	<summary>
+		<h2>Summary of Movie</h2>
+		A tragic incident forces Anirudh, a middle-aged man, to take a trip down memory lane and reminisce his college
+		days along with his friends, who were labelled as losers."Chhichhore".
+	</summary>
+
+	<section id="actor">
+		<h2>Actors of movie</h2>
+		<ul>
+			<li>Shushant Singh Rajput: Aniruddh Pathak(Anni)</li>
+			<li> Varun Sharma: Gurmeet Singh Dhillon(Sexa)</li>
+			<li>Naveen Polyshetty: Acid</li>
+			<li>Tahir Raj Bhasin: Derek</li>
+			<li>Tushar Pande: Mummy</li>
+			<li>Saharsh Kumar Shukla: Bevda</li>
+			<li>Prateik Babbar: Raggie(as prateik)</li>
+			<li>Shraddha kapoor: Maya</li>
+		</ul>
+	</section>
+
+	<section id="quote">
+		<h2>Here is the famous quote from Chhichhore</h2>
+		<blockquote cite="https://www.scrolldroll.com/chhichhore-dialogues/">
+			Success ke baad ka plan sabke paas hai…
+			lekin agar galti se fail ho gaye…
+			toh failure se kaise deal karna hai…
+			Koi baat hi nahi karna chahta
+		</blockquote>
+	</section>
+
+	<aside>
+		<h5>IMDb Rating: 8.3⭐/10</h5>
+		<h5>Release Date: 6 September 2019</h5>
+	</aside>
+</main>
+
+<footer>
+	<h3>Produced by:</h3>
+	<li>Sajid Nadiadwala</li>
+</footer>
 
 </html>
